[package]
name = "node-primitives"
version = "2.0.0"
authors = ["Kaichao Sun"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://climacoin.world/"
repository = "https://github.com/WB-Expert5007/Shear"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-application-crypto = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", default-features = false }
sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-system/std",
	"scale-info/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
]
